fixed layout issues. wrapping. colors. links.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #1a1a1a;
+	background-color: #313131;
 }
 
 
@@ -9,20 +9,20 @@ a {
 }
 
 .link {
-	color: #ff6666;
+	color: #85d3dc;
 }
 
 .link:hover {
-	color:#3baae0;
+	color:#d55b71;
 	text-decoration: underline;
 }
 
 #backButton {
-	color: #3bffe0;
+	color: #85d3dc;
 }
 
 #backButton:hover {
-	color:#ff6666;
+	color:#d55b71;
 	text-decoration: underline;
 }
 
@@ -33,13 +33,15 @@ a {
 	margin-right:20px;
 	margin-bottom:20px;
 	font-family: Arial, helvetica, sans-serif;
-	color: #e6e6e6;
+	color: #fffff7;
 	font-size: 70px;
 }
 
 #playlistContainer {
 	display:flex;
-	max-width:1000px;
+	max-width:1500px;
+	flex-direction:row;
+	flex-wrap: wrap;
 }
 
 .iconContainer {
@@ -54,7 +56,7 @@ a {
 	border-radius:15px;
 }
 
-#c1, #c2, #c3 {
+/* #c1, #c2, #c3 {
 	display:flex;
 	flex-direction:column;
 	flex-wrap: wrap;
@@ -62,13 +64,16 @@ a {
 	align-content:left;
 	flex-grow:1;
 	width:100%;
-}
+} */
 
 .playlist {
 	margin:10px;
-	background-color:#e6e6e6;
+	background-color:#fffff7;
 	padding:10px;
 	border-radius:20px;
+	width:40%;
+	max-width:300px;
+	min-width:160px;
 }
 
 .playlistPreview {
@@ -79,7 +84,7 @@ a {
 
 .playlistTitle {
 	font-family: Arial, helvetica, sans-serif;
-	color: #1a1a1a;
+	color: #323232;
 	font-size: 30px;
 	font-weight:bold;
 	margin:10px;
@@ -87,7 +92,7 @@ a {
 
 .playlistDescription {
 	font-family: Arial, helvetica, sans-serif;
-	color: #1a1a1a;
+	color: #323232;
 	font-size: 20px;
 	margin:10px;
 }
